# jquants-api-client-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/hello_world/: .env  Cargo.toml
examples/hello_world/src/: main.rs
examples/pagination/: Cargo.toml
examples/pagination/src/: main.rs
src/: api.rs  client.rs  error.rs  lib.rs  polars_utils.rs
src/api/: auth.rs  breakdown_trading_data.rs  builder.rs  cash_dividend_data.rs  daily_stock_prices.rs  earnings_calendar.rs  error_response.rs  financial_statement_details.rs  financial_statements.rs  futures_prices.rs  index_option_prices.rs  indicies.rs  listed_info.rs  listed_issue_info.rs  morning_session_stock_prices.rs  options_prices.rs  pagination.rs  prices_daily_quotes.rs  refresh_token.rs  shared.rs  short_sale_by_sector.rs  stock_prices.rs  token_auth_refresh.rs  token_auth_user.rs  topic_prices.rs  trading_by_type_of_investors.rs  trading_calendar.rs  weekly_margin_trading_outstandings.rs
src/api/auth/: id_token.rs
src/api/listed_info/: market_code.rs  sector17_code.rs  sector33_code.rs
src/api/listed_issue_info/: market_code.rs  sector17_code.rs  sector33_code.rs
src/api/shared/: auth.rs  deserialize_utils.rs  responses.rs  traits.rs  types.rs
src/api/shared/auth/: id_token.rs  refresh_token.rs
src/api/shared/responses/: error_response.rs
src/api/shared/traits/: builder.rs  pagination.rs
src/api/weekly_margin_trading_outstandings/: issue_type.rs
src/client/: free_plan_client.rs  light_plan_client.rs  premium_plan_client.rs  standard_plan_client.rs
(+19 files in other folders)
