[package]
name = "jquants-api-client"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "deny"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tracing = "^0.1"
chrono = "^0.4"
tokio = { version = "^1.41", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
