[package]
name = "jquants-api-client"
version = "0.1.0"
edition = "2021"
authors = ["ktanaka101 <kentanaka101@gmail.com>"]
description = "A Rust client for the J-Quants API, providing seamless access to financial data."
license = "MIT"
repository = "https://github.com/ktanaka101/jquants-api-client-rust"
documentation = "https://docs.rs/jquants-api-client"

[lints.rust]
missing_docs = "deny"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_plain = "^1.0"
thiserror = "^2.0"
tracing = "^0.1"
chrono = "^0.4"
tokio = { version = "^1.41", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

polars = { version = "^0.44", optional = true, features = [
  "dtype-date",
  "dtype-time",
  "dtype-categorical",
] }

[dev-dependencies]
pretty_assertions = "1.4"
maplit = "1.0"
expect-test = "1.5"

[features]
default = []
polars = ["dep:polars"]
